spacing fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ h6 {
 }
 
 .li-space-lg li {
-	margin-bottom: 0.5rem;
+	margin-bottom: 1.5rem;
 }
 
 a {
@@ -1665,7 +1665,7 @@ a:hover.back-to-top {
 	/* Mission */
 	.basic-4 {
 		position: relative;
-		height: 32rem;
+		height: 25rem;
 		padding: 0;
 		margin-top: 8rem;
 		
